bynkc/tests/fixtures/positive/60_uses_multiple/src/c/main.bynk
commons c

uses a
uses b

type Combo = {
  count: Alpha,
  label: Beta,
}
