bynkc/tests/fixtures/negative/246_stream_at_boundary/input.bynk
commons c {
  type Bad = {
    s: Stream[Int],
  }
}
